2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/Makefile.in,
	  device/lib/pdk14/__gptrget.s,
	  device/lib/pdk15/Makefile.in,
	  device/lib/pdk15/__gptrget.s,
	  src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Improve read of 16-bit value via pointer.

2019-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCCast.c,
	  support/regression/tests/vaargs.c:
	  Disable omission of integer promotion of varargs for pdk.
	* device/include/stdarg.h:
	  Fix variable arguments for pdk.
	  src/pdk/gen.c:
	  Fix stack adjustment for reentrant function returning 16-bit value.
	* support/regression/tests/bug2084206.c,
	  support/regression/tests/gcc-torture-execute-920721-1.c,
	  support/regression/tests/gcc-torture-execute-920829-1.c,
	  support/regression/tests/gcc-torture-execute-921013-1.c,
	  support/regression/tests/gcc-torture-execute-921124-1.c,
	  support/regression/tests/gcc-torture-execute-980604-1.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fix bug in optimized 2 byte swap
	* support/regression/tests/bool.c: pass all ds390 tests now

2019-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr39339.c,
	  support/regression/tests/gcc-torture-execute-pr41750.c,
	  support/regression/tests/gcc-torture-execute-pr42833.c,
	  support/regression/tests/gcc-torture-execute-pr43236.c,
	  support/regression/tests/gcc-torture-execute-pr44575.c,
	  support/regression/tests/gcc-torture-execute-20030717-1.c,
	  support/regression/tests/gcc-torture-execute-20031204-1.c,
	  support/regression/tests/gcc-torture-execute-20040409-2.c,
	  support/regression/tests/gcc-torture-execute-20050218-1.c,
	  support/regression/tests/gcc-torture-execute-20050502-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c,