@@ -16,7 +16,7 @@
 
 #include <string.h>
 
-
+#ifndef __SDCC_pdk14 // Lack of memory
 void test1 (void *ptr)
 {
   if (memcpy(ptr,ptr,8) != ptr)
@@ -61,11 +61,12 @@ void test7 (const char *ptr)
   if (strncmp(ptr,ptr,8) != 0)
     ASSERT (0);
 }
-
+#endif
 
 void
 testTortureExecute (void)
 {
+#ifndef __SDCC_pdk14 // Lack of memory
   char buf[10];
 
   test1 (buf);
@@ -81,5 +82,6 @@ testTortureExecute (void)
   test7 (buf);
 
   return;
+#endif
 }
 
