@@ -7,10 +7,12 @@
 int _asm;
 #endif
 
+#ifndef __SDCC_pdk14 // Lack of memory
 int _endasm, at, bit, code, critical, data, far,
 eeprom, fixed16x16, flash, idata, interrupt, nonbanked, banked, near,
 pdata, reentrant, shadowregs, wparam, sfr, sfr16, sfr32, sbit, sram,
 using, _naked, xdata, _overlay;
+#endif
 
 void testBug(void)
 {
